:sparkles::construction: add proper  to the top input. Not centered (bug)

--- a/src/components/BudgetInput/BudgetInput.css
+++ b/src/components/BudgetInput/BudgetInput.css
@@ -2,11 +2,22 @@ input {
     min-width: 10px;
     padding: 6px;
     border: none;
-    font-size: 18px;
     font-family: sans-serif;
     background-color: transparent;
+    font-size: 56px;
+    margin-top: 40px;
+    color: #fff;
 }
-#budgetInputForm {
+
+.headerContainer {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width:auto;
+    text-align: center;
+}
+
+.input-icon {
     width: auto;
     padding: 6px;
     border: none;
@@ -15,23 +26,17 @@ input {
     color: #fff;
     text-align: center;
 }
-#budgetInputForm:before {
-    content: "$";
-    font-size: 30px;
-}
-.headerContainer {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
+
 input:focus {
     outline: none;
 }
+
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
 }
+
 #inputsubtext {
     font-family: Prompt, sans-serif;
     font-style: normal;
